Finished Updating related data - EF Core with ASP.NET Core MVC tutorial (7 of 10)

--- a/TutorialUniversity/Views/Instructors/Edit.cshtml
+++ b/TutorialUniversity/Views/Instructors/Edit.cshtml
@@ -51,7 +51,8 @@
                                         <input type="checkbox"
                                                name="selectedCourses"
                                                value="@course.CourseID"
-                                               @(Html.Raw(course.Assigned ? "checked=\"checked\"" : "")) />
+                                               checked="@course.Assigned"
+                                               />
                                                @course.CourseID @:  @course.Title
                                     @:</td>
                                 }
