Changing back to Postgres using Xmin for row version

--- a/TutorialUniversity/Views/Departments/Delete.cshtml
+++ b/TutorialUniversity/Views/Departments/Delete.cshtml
@@ -37,7 +37,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="DepartmentID" />
-        <input type="hidden" asp-for="RowVersion" />
+        <input type="hidden" name="RowVersion" value="@ViewData["RowVersion"]" />
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             <a asp-action="Index">Back to List</a>
